@@ -1,12 +1,21 @@
 DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v7r7-3.18.patch1 3339 SHA256 75a43175fb6f289215669a7aff23a86459bcf966303a24b4013a42da53fad035 SHA512 8d40d1c18a24d5d442bd76bb965bebbab3bd1e575185eeb5681b4e316389c1d9c74fb690426eb929779deafc25fd3da500f8145c0d4454e41baed63cf428e61e WHIRLPOOL 4fd2d2b672b64785a18d10a9d8d2d676b792df84332f43f8578a66a9d7434f2d3e673e6f93b2cb9007636a30585a647e015be7ec9b829988d337540f873e9918
+DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v7r7-3.19.patch1 3339 SHA256 fac4a507a7a16948a0069be784624f87effeb0b7992507104c7db81c190c93e2 SHA512 a4f9b4cc5ac85d3bf9b8a3420fd550bf1361d24f1314953d7c073f07a4d008ee5bfcadafba28bd57aa7228857392c131af12a0804da256bc98cfd9462112051e WHIRLPOOL 1c962d7d9b82c26d88b59106dfafa2fe9034133cb50baad6b14f072f17fdd59ba47fe9e074c88daf2a8466eabce7d22eba7ee2450506df93f7bee928d8427157
 DIST 0002-block-introduce-the-BFQ-v7r7-I-O-sched-for-3.18.patch1 224820 SHA256 68045bcff777bc175e9f17ba46e0a8b13450c4546c6c9db3d9b9e2ed31af812d SHA512 83d228ea4de43e4d27737e724b352b6467855600e4d1316daebc0534d6507f5adec1c73a5e7b45be87f3bbbb2ad1f443c4368f5855a9b418fbc115bc44807706 WHIRLPOOL 8728d306eea8abb857f8944d4196d292a6a7ff21edeb4e7bdecd49aab3987147517d0b68b75b4194f9e342bb50bd435923ad9dc7b7c2c537f4abed1eb3518a17
+DIST 0002-block-introduce-the-BFQ-v7r7-I-O-sched-for-3.19.patch1 224820 SHA256 621d4877d992f353ec6d9f977377552077aeebe85c47e65716e99d699af5cb11 SHA512 04cd37e2043c32e27406720a12212227fd307c67024e27127386e9c6f20e8fdd04c1a423b334cc41868dac935de0c8e59ef2220bddbb4b1e47f4e6c115bf0091 WHIRLPOOL 07b547aae8cbf61324837b9bab1c6829d6c478210f67a751cd10fd1bd0ba77a4210fcc5bad3dec8f4ea71714a4a87446003d354bc07b1bb8208d1ac24bfbe335
 DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7r7-for-3.18.0.patch1 42435 SHA256 cda196f911af55f8c26e711040a66637aed03df9dfdc149aaf7fdbecf1bb19da SHA512 109e332d99b6deabc8c802ebd0e455fb6c7176135a3d16074b118d6b56cfbc866a764cb08aa3266becdb4ce16f4751b68c52bef77c15098d330a9a176e9675ef WHIRLPOOL 6356cf9ff8ee4177cc9cf30eab1e0ffb2deaf0dd2081196cadfbe3f41ee8dc5462f74a047edc0a74a0a6ec01fda38c189574ea19da4bd1372d77dc4cb4320a8c
+DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7r7-for-3.19.0.patch1 42435 SHA256 1509740239a2f5b623bc05b3b9efbfd4e2fa75029503e0770a274f7e7c59d79f SHA512 5298979067a41dc6506a08664ef70fc3d9ef5155a1ac6a7cc65e050282498d3451aa3077028c05d97e9467ee7d083ce45606ab2582558a26a2cc95c8b6cbfa81 WHIRLPOOL f8e1b324dfb05cf50d258b5739e21e29977656aabcdb22dd4817044d5ac7a146d2bd00226e5b37d3189f2b9d889f549ba4b8bef89088f8b883da1cb160c89854
 DIST README-v7r7-0.BFQ 21937 SHA256 d53e830875c98294b14311d19422e0fa039658eff2261ffa71d678c578b7fe81 SHA512 639d69e73eace76ed2415ce040f66bbf16fce3acf274409c35b434d0baaed42b80fec84226e345c162f0b5825986787f99895291b9fdac54eb6245f57be84f9c WHIRLPOOL 530fd3cbb16903ba7e64d674579713d3e6c17a98c051ffa0b9dd63bb2f3da82f7d574d24ce28ab79252e750418caf41c6951cf8961ac0b10ce39729df47813aa
 DIST aufs-sources-3.18.1+_p20150126.tar.xz 164988 SHA256 51f1b25a3bd56a4c044d704d2eb997c2e51c555c4018d464ab1583049b2593e1 SHA512 f17a327143524c7a90076a03ae8c45655ddc5885b1ba2b3e4a29158e90b2f61fd674e517a4256153d9c6d1cf20ba6a511ec67cc53a6493b35fd4e72968217df6 WHIRLPOOL fb7d8e4e917105d3ac5dfe5003052eb0ecc298b6f0579caba9c73620ce42a524145d5692bebb6f60026d631aa2edde4ed2b8584f1be84cc1c0199bb4d3c921dd
+DIST aufs-sources-3.19_p20150216.tar.xz 164816 SHA256 0152a53cc54940edc7d4a61b488c8977e020a89825339d9076d5a0f2b4f76e2f SHA512 9d61e265702b7b2545808a9172ad274769562a3be1b59124862fcd9436f98f0b4dc2240daaac1d5ee0e841e26affe843ec895f82170af4f196e04986912037ea WHIRLPOOL ced8a422da716fbbc7681dc7b442666ac2fa5339b45056bbea5b1f74f10532ffc15deb010c7a18d51b4927c98e82163cfe7948c65d3f475eebb64fad61350b29
 DIST deblob-3.18 127087 SHA256 c720eabb3911f8dfa4398c4250853df4633018abebc01a509ee4a283c3e00941 SHA512 6fe33762ba19aad7ff891b7b805cc26f6e2926f5e40c92fa45bc7f31bdeb5c8fc42b97e5d37d71b9422da239c7c54abd25f1fa2fa1e5733c6053abbf4c9e9011 WHIRLPOOL c351a3ae15c59081fca69c1b5d9b9de10f024eb01f1426722a0d6ccb7caa34330be42897cd85cf19b22ff876352b0cec1c19707edc81c4cb01ad9c1df2e3d831
+DIST deblob-3.19 129098 SHA256 b0e121e80f02676bc023df1470691b94bd0495ae09aa349d1e6edddf7d1b34a2 SHA512 8f9327d5bb56fbc24f72622d579232003db95695c0cd22b4ce0b4692c9757b639c1253548d943f7cbdde9652cf51814f4b4fdf92055e8ae1c9d75acdc68d9a32 WHIRLPOOL bc3ed9eeec3ab77e2f18ec4a2a536a58b4bf2091a50219220c4d1d21de6956709c97dbb098eba64eacb2fac45f410020f6c37a3f890e6e820d5d8faebc3f3b3c
 DIST deblob-check-3.18 654232 SHA256 30f22602b6ddf2cbccc16ef25fdc4d92755f3972e1c671d7cab8b9d6865eb155 SHA512 2cff9abef479a55dd6a0699371be8227ba63b18da1fb153d5df382e0a5e4f1b745b7de256a367a36efa9d12e2aad5622cc288efef009feebf81c108dbef4fe16 WHIRLPOOL e92927ad1565e80ce87e8bda372f8f7eb42bc0f47ad9b19fe5cf737903b2021fd6e3756e8d22b70f3037a46c254fec8b7285b37beb10795ccb4ca99d38876f8c
+DIST deblob-check-3.19 659945 SHA256 df5a9b11b095b0d8c3204c9b24118d77689900fc4ef4c3256b13fe86aee0d185 SHA512 f7fc86ebc8e1c61c16d7ce6831368832862346522676b65f4702c77bb2e9b08691f2c67cf88e92929908d5300d53913e7e5365baf3378b1cbe3aca59ec80c672 WHIRLPOOL e5e33da007c07af4ca5713d583f992d9da8c6745761e1956a246de429a44aa972a94cc1db51e67d0ba1aad9b8476ef694d846e8157a85411bcbc1809f20f633a
 DIST genpatches-3.18-9.base.tar.xz 207580 SHA256 931fee6744642d052ce2d7e5324f904cefed9d62d1314d16a7dfbacee43bbef9 SHA512 dd156bcdee7b9f9dbd66ca0720743a2378ca4a828f867ab086d5e99d91618b375bf44e8e8796b6e2ca0db6c584f0c32135dc20b16a603f1c0bdf0605af978d5e WHIRLPOOL 6f1ae442d8b7bb8686f8dbff55d6bc2243a2073c32c246a8db1040e7c578d92d4e4fd313c15079a3e7c774ac0731939864e7804061a3a260c0e584bcb883ade7
 DIST genpatches-3.18-9.extras.tar.xz 16180 SHA256 edd42f842d055068e19916955bd586da60b0a1cb6af954aac1505466ab469eb8 SHA512 6e4759a58cc61bddc9d703932e22c8db14c4b437b788bb0eee6aedb709bc8223e3621e853fc6dc51ba23309778e5633e6982af59fdd9bcbecfbedfa619ba006b WHIRLPOOL b76c94fd7ae178344c20e921153d568c9bcf220670d4c9130c53dec398be9e04ad7700d48e3f94dcc4da1b631f9e2831f0d7c3b29f98d66c9b75098aa3ecd358
+DIST genpatches-3.19-1.base.tar.xz 3228 SHA256 f1cb186a18c9b075ebc38c179eb9306dd00600da8358d7f4ea6b434f4d4a10b4 SHA512 a128e78662896021940d6d87a61c0752ad5da4bd1fdfb0f8e784f3353bd6ed3f46ba34632ccdd34ac2526861226e829f63a253a0b28e0b5a373e0b1b27d49ccf WHIRLPOOL 364d8b04724b5e9528a68bb328329a9b73f88e43aa5015f92a008da4718ce9a635b4a2b51a531b7d58355ea96762d575e14b7c7a3087ac61aabb2cc19b541409
+DIST genpatches-3.19-1.extras.tar.xz 1456 SHA256 63959517328e3266a0e27044b1611fe7d3a9ac69e43e806b468ff45b05407036 SHA512 1340c63dab494766fb458b5a8c7982693d483b00c83f9a40c97f4754c5f64db94987f73997c89f00d302654d4376f21f94c858e594a51fb2257a15ec30378a4f WHIRLPOOL 02a3349b0c77f5fc4fdab9c5c5fb20f100039e0cd03c3fc2bcdc3f2adc99d0b46e0941696b3fd6f28ca07ebfc300f888f4649a0e964dc02314ac5417d71bc47e
 DIST lh-logo_linux_320_240_clut224.ppm 58367 SHA256 9692bfdd2257ae5131ac14eb6f34386416ec228be68a4bb02381378876e34812 SHA512 18cd56961a81f4ca87933859a35d84af86602f480a6b92dbb3c2f4a9b83abb7023c64939bc781bbe7f9e8e105df508698a66790909f9144fb99c1e347ccf22de WHIRLPOOL 66933acfce018d07d9d70dbfd56155bb23f7fdccb2295c28100165d6c8c14194556bdadf66b119f42db1d700d1ce5bf2eeca17f44c26582bb13656d166c055e8
 DIST lh-sources-kernel-da192988c7cb69709bb70f74f576f1479dce0e1d.patch 16381 SHA256 65118fccbba51186bd5904c2f3439e4dafbdebf3b638b2338abcf69a3bda1333 SHA512 66043a3cd267be5209c382b6aa9c9cf995d5499e8873546794042fbf17bacf577f9b4ab010fd3f20c629f40613c89b3e3d49536e7717b4a6e380c01547c39f41 WHIRLPOOL c43d99483c02fb5b193769f0a7a6ce9a868b12aad29fc1382b4d3c72cb4cb5baefa98929d5d9fb7d5e1524f5b6e75f5330ed039a15391a7a54e7b7053c3847a1
 DIST linux-3.18.tar.xz 80934708 SHA256 becc413cc9e6d7f5cc52a3ce66d65c3725bc1d1cc1001f4ce6c32b69eb188cbd SHA512 2f0b72466e9bc538a675738aa416573d41bbbd7e3e2ffd5b5b127afde609ebc278cec5a3c37e73479607e957c13f1b4ed9782a3795e0dcc2cf8e550228594009 WHIRLPOOL 81634af631b7d30ccd1f4798f96f44d9aa0ba6609b73f2747eb6aebaf7a99487fb2dbd45767605186182533cb222bfd9236e8dd5e11a04fdb67c211e4e0a91d6
+DIST linux-3.19.tar.xz 81688872 SHA256 be42511fe5321012bb4a2009167ce56a9e5fe362b4af43e8c371b3666859806c SHA512 d77bfd9b1cd524ac50bb5a93808955be2f9bcd2ec0badcc8aa6a63401e212f891fd14bd27c6441174ba5d70ab875b9e76c7ebc95f046e31aff1d40790d30351c WHIRLPOOL 76a17bb3d7c30cee19e135940f3607106efb2984061f946f0da9a2ddd602dc1bfc7e6f8970975cfb113d13f23a75415f39938204af266e2819e7a239b6f46778
